refactor : 메소드 확장 가능하게 수정